--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,7 @@
                         "tsConfig": "tsconfig.app.json",
                         "aot": true,
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["./node_modules/@angular/material/prebuilt-themes/purple-green.css", "src/styles.scss"],
+                        "styles": ["src/styles.scss"],
                         "scripts": []
                     },
                     "configurations": {
